--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch server --watch db ./server/index.mjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^12.0.0",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "koa": "^2.14.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
