--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "lottery-data",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.mjs",
   "scripts": {
+    "dev": "nodemon ./index.mjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^12.0.0",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "koa": "^2.14.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
