--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.26",
     "vue": "^3.2.45",
+    "vue-echarts": "^6.3.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
