nodemon 忽略 db.json

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.mjs",
   "scripts": {
-    "dev": "nodemon ./index.mjs"
+    "dev": "nodemon ./index.mjs --ignore db/db.json"
   },
   "author": "",
   "license": "ISC",
